--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
   
 body {
-    @apply overflow-y-scroll bg-gray-50
+    @apply overflow-y-scroll bg-gray-50 dark:bg-gray-800
 }
 
 dd {
